--- a/src/luckydraw/luckydraw.css
+++ b/src/luckydraw/luckydraw.css
@@ -54,3 +54,39 @@
   top: 605px;
   pointer-events: none;
 }
+
+/* 여기서부터는 결과 css */
+.resultContainer {
+  width: 600px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+
+  border: 2px solid #7f83d5;
+  border-radius: 20px;
+  box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
+}
+
+.score {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+  margin-top: 28px;
+  margin-left: 38px;
+}
+
+.text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 29px;
+  margin-left: 38px;
+}
+
+.cat {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  left: 780px;
+  top: 350px;
+}
