refactor: link 경로 수정 및 css 수정

--- a/src/luckydraw/luckydraw.css
+++ b/src/luckydraw/luckydraw.css
@@ -50,8 +50,7 @@
   position: absolute;
   width: 400px;
   height: 400px;
-  left: 36%;
-  top: 605px;
+  margin-top: 350px;
   pointer-events: none;
 }
 
