--- a/src/result/resultPage.css
+++ b/src/result/resultPage.css
@@ -197,6 +197,7 @@
 	line-height: 30px;
 	letter-spacing: 0.1em;
 	text-transform: capitalize;
+
 }
 
 .result_link {
@@ -247,4 +248,23 @@
 	background-repeat: no-repeat;
 	margin-right: 2%;
 	margin-bottom: 1%;
+}
+
+.body_right2 {
+	display: flex;
+	flex-direction: column;
+	width: 6000px;
+	height: 490px;
+	left: 788px;
+	top: 353px;
+	background: #EEF0F9;
+	border-radius: 8%;
+	margin-left: 180px;
+	margin-right: 30px;
+	margin-bottom: 80px;
+	color: #000000;
+	font-family: 'B612';
+	font-style: normal;
+	font-weight: 400;
+	line-height: 30px;
 }
