--- a/src/clubResult/clubResultPage.css
+++ b/src/clubResult/clubResultPage.css
@@ -233,6 +233,27 @@
 
 }
 
+.toshare {
+	display: flex;
+	flex-direction: column;
+	font-family: 'SF Pro Display';
+	font-style: normal;
+	font-weight: 400;
+	margin-left: 160px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	width: 10%;
+	height: 50%;
+
+}
+
+.toshare:hover {
+	color: orchid;
+}
+
 
 .footer {
 	display: flex;
