--- a/src/result/resultPage.css
+++ b/src/result/resultPage.css
@@ -272,3 +272,24 @@
 .insta:hover {
 	color: #7F83D5;
 }
+
+.toshare {
+	display: flex;
+	flex-direction: column;
+	font-family: 'SF Pro Display';
+	font-style: normal;
+	font-weight: 400;
+	margin-left: 160px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	width: 10%;
+	height: 50%;
+
+}
+
+.toshare:hover {
+	color: orchid;
+}
