--- a/src/result/resultPage.css
+++ b/src/result/resultPage.css
@@ -1,3 +1,15 @@
+@font-face {
+	font-family: "SF Pro Display";
+	src: url("../font/SFProDisplay.ttf");
+}
+@font-face {
+	font-family: "Shrikhand";
+	src: url("../font/Shrikhand.ttf");
+}
+@font-face {
+	font-family: "Open Sans";
+	src: url("../font/OpenSans.ttf");
+}
 * {
 	margin: 5px;
 	box-sizing: border-box;
@@ -197,6 +209,7 @@
 	line-height: 30px;
 	letter-spacing: 0.1em;
 	text-transform: capitalize;
+
 }
 
 .result_link {
@@ -247,4 +260,48 @@
 	background-repeat: no-repeat;
 	margin-right: 2%;
 	margin-bottom: 1%;
+}
+
+.body_right2 {
+	display: flex;
+	flex-direction: column;
+	width: 6000px;
+	height: 490px;
+	left: 788px;
+	top: 353px;
+	background: #EEF0F9;
+	border-radius: 8%;
+	margin-left: 180px;
+	margin-right: 30px;
+	margin-bottom: 80px;
+	color: #000000;
+	font-family: 'B612';
+	font-style: normal;
+	font-weight: 400;
+	line-height: 30px;
+}
+
+.insta:hover {
+	color: #7F83D5;
+}
+
+.toshare {
+	display: flex;
+	flex-direction: column;
+	font-family: 'SF Pro Display';
+	font-style: normal;
+	font-weight: 400;
+	margin-left: 160px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+	width: 10%;
+	height: 50%;
+
+}
+
+.toshare:hover {
+	color: orchid;
 }
