--- a/src/clubResult/clubResultPage.css
+++ b/src/clubResult/clubResultPage.css
@@ -1,275 +1,269 @@
 * {
-	margin: 5px;
-	box-sizing: border-box;
+  margin: 5px;
+  box-sizing: border-box;
 }
 
 .background {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	width: 1400px;
-	height: 1024px;
-	background: #ffffff;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1400px;
+  height: 1024px;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .header {
-	width: 73%;
-	height: 13%;
-	margin-top: 4%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
+  width: 73%;
+  height: 13%;
+  margin-top: 4%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .logo {
-	left: 0%;
-	right: 74.01%;
-	top: 0%;
-	bottom: 0%;
+  left: 0%;
+  right: 74.01%;
+  top: 0%;
+  bottom: 0%;
 
-	font-family: 'Shrikhand';
-	font-style: italic;
-	font-weight: 400;
-	font-size: 80px;
-	line-height: 117px;
-	display: flex;
-	align-items: center;
-	text-transform: capitalize;
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 80px;
+  line-height: 117px;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
 
-	color: #191B41;
+  color: #191b41;
 }
 
 .longLine {
-	width: 31%;
-	margin-left: 15%;
-	border: 4px solid #94ADDF;
+  width: 31%;
+  margin-left: 15%;
+  border: 4px solid #94addf;
 }
 
 .midLine {
-	width: 8%;
-	border: 4px solid #94ADDF;
+  width: 8%;
+  border: 4px solid #94addf;
 }
 
 .shortLine {
-	width: 3.8;
-	border: 4px solid #94ADDF;
+  width: 3.8;
+  border: 4px solid #94addf;
 }
 
 .mypage {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: center;
-	padding: 8px 40px;
-	border: 2px solid #3E397E;
-	border-radius: 24px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 40px;
+  border: 2px solid #3e397e;
+  border-radius: 24px;
 
-	/* font */
-	font-family: 'Open Sans';
-	font-style: normal;
-	font-weight: 700;
-	font-size: 16px;
-	color: #0A2640;
+  /* font */
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  color: #0a2640;
 }
 
 .body {
-	display: flex;
-	flex-direction: column;
-	background-image: url("note.png");
-	background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  background-image: url("note.png");
+  background-repeat: no-repeat;
 
-	width: 84%;
-	height: 59.9%;
-	margin-top: 3%;
+  width: 84%;
+  height: 59.9%;
+  margin-top: 3%;
 }
 
 .body_header2 {
-	width: 250px;
-	margin-top: 50px;
-	margin-left: 180px;
-	height: 26px;
-	left: 336px;
-	top: 334px;
-	flex-direction: row;
-	font-family: 'Shrikhand';
-	font-style: italic;
-	font-weight: 400;
-	font-size: 18px;
-	line-height: 26px;
-	display: flex;
-	align-items: center;
-	text-align: center;
-	text-transform: capitalize;
-	color: #191B41;
+  width: 250px;
+  margin-top: 50px;
+  margin-left: 180px;
+  height: 26px;
+  left: 336px;
+  top: 334px;
+  flex-direction: row;
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: capitalize;
+  color: #191b41;
 }
 
 .resultName {
-	margin-left: 210px;
-	width: 250px;
-	height: 88px;
-	left: 324px;
-	top: 383px;
-	font-family: 'Shrikhand';
-	font-style: italic;
-	font-weight: 400;
-	font-size: 30px;
-	line-height: 44px;
-	display: flex;
-	align-items: center;
-	text-align: center;
-	text-transform: capitalize;
+  margin-left: 210px;
+  width: 250px;
+  height: 88px;
+  left: 324px;
+  top: 383px;
+  font-family: "Shrikhand";
+  font-style: italic;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 44px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: capitalize;
 
-	color: #000000;
+  color: #000000;
 }
 
 .body_body {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	width: 100%;
-	height: 51%;
-	margin: 0px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 51%;
+  margin: 0px;
 }
 
 .body_left {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	justify-content: center;
-	width: 50%;
-	height: 100%;
-	margin: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  width: 50%;
+  height: 100%;
+  margin: 0px;
 }
 
 .photo {
-	display: flex;
-	flex-direction: column;
-	width: 380px;
-	height: 298px;
-	left: 223px;
-	top: 487px;
-	border: 1px solid #7F83D5;
-	border-radius: 10px;
-	margin-left: 110px;
-	margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  width: 380px;
+  height: 298px;
+  left: 223px;
+  top: 487px;
+  border: 1px solid #7f83d5;
+  border-radius: 10px;
+  margin-left: 110px;
+  margin-top: 100px;
 }
 
 .body_right {
-	display: flex;
-	flex-direction: column;
-	width: 6000px;
-	height: 490px;
-	left: 788px;
-	top: 353px;
-	background: #EEF0F9;
-	border-radius: 8%;
-	margin-left: 180px;
-	margin-right: 100px;
-	margin-bottom: 80px;
-	color: #000000;
-	font-family: 'B612';
-	font-style: normal;
-	font-weight: 400;
-	line-height: 30px;
-
-
+  display: flex;
+  flex-direction: column;
+  width: 6000px;
+  height: 490px;
+  left: 788px;
+  top: 353px;
+  background: #eef0f9;
+  border-radius: 8%;
+  margin-left: 180px;
+  margin-right: 100px;
+  margin-bottom: 80px;
+  color: #000000;
+  font-family: "B612";
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
 }
 
 .result_name {
-	text-align: center;
-	margin-top: 40px;
-	font-size: 12px;
-	line-height: 30px;
-	letter-spacing: 0.1em;
-	text-transform: capitalize;
-
+  text-align: center;
+  margin-top: 40px;
+  font-size: 12px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  text-transform: capitalize;
 }
 
 .result_explain {
-	margin-top: 20px;
-	margin-left: 30px;
-	margin-right: 30px;
-	font-size: 12px;
-	line-height: 30px;
-	letter-spacing: 0.1em;
-	text-transform: capitalize;
+  margin-top: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 12px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  text-transform: capitalize;
 }
 
 .result_link {
-	margin-top: 20px;
-	margin-left: 30px;
-	margin-right: 30px;
-	font-size: 10px;
-	line-height: 30px;
-	letter-spacing: 0.1em;
-	text-transform: capitalize;
+  margin-top: 20px;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-size: 10px;
+  line-height: 30px;
+  letter-spacing: 0.1em;
+  text-transform: capitalize;
 }
 
-
 .body_footer {
-	display: flex;
-	flex-direction: column;
-	font-family: 'SF Pro Display';
-	font-style: normal;
-	font-weight: 400;
-	margin-left: 110px;
-
+  display: flex;
+  flex-direction: column;
+  font-family: "SF Pro Display";
+  font-style: normal;
+  font-weight: 400;
+  margin-left: 110px;
 }
 
 .body_footer:hover {
-	color: orchid;
+  color: orchid;
 }
 
 .shareImg {
-	display: flex;
-	flex-direction: column;
-	bottom: 0px;
-	margin-bottom: 10px;
-	margin-left: 20px;
-	width: 30px;
-
+  display: flex;
+  flex-direction: column;
+  bottom: 0px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  width: 30px;
 }
 
 .toshare {
-	display: flex;
-	flex-direction: column;
-	font-family: 'SF Pro Display';
-	font-style: normal;
-	font-weight: 400;
-	margin-left: 160px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	justify-content: center;
-	width: 10%;
-	height: 50%;
-
+  display: flex;
+  flex-direction: column;
+  font-family: "SF Pro Display";
+  font-style: normal;
+  font-weight: 400;
+  margin-left: 136px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  width: 10%;
+  height: 50%;
 }
 
 .toshare:hover {
-	color: orchid;
+  color: orchid;
 }
 
-
 .footer {
-	display: flex;
-	flex-direction: column-reverse;
-	align-items: end;
-	width: 100%;
-	height: 18%;
-	margin: 0px;
+  position: static;
+  bottom: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: end;
+  width: 100%;
+  height: 18%;
+  margin: 0px;
 }
 
 .goTo {
-	width: 1.6%;
-	height: 14%;
-	background: #424242;
-	background-image: url("/image/ic-github.png");
-	background-repeat: no-repeat;
-	margin-right: 2%;
-	margin-bottom: 1%;
+  width: 1.6%;
+  height: 14%;
+  background: #424242;
+  background-image: url("/image/ic-github.png");
+  background-repeat: no-repeat;
+  margin-right: 2%;
+  margin-bottom: 1%;
 }
