--- a/src/clubResult/clubResultPage.css
+++ b/src/clubResult/clubResultPage.css
@@ -1,3 +1,19 @@
+@font-face {
+	font-family: "SFProDisplay";
+	src: url("../font/SFProDisplay.ttf");
+}
+@font-face {
+	font-family: "Shrikhand";
+	src: url("../font/Shrikhand.ttf");
+}
+@font-face {
+	font-family: "OpenSans";
+	src: url("../font/OpenSans.ttf");
+}
+@font-face {
+	font-family: "B612";
+	src: url("../font/B612.ttf");
+}
 * {
   margin: 5px;
   box-sizing: border-box;
@@ -67,7 +83,7 @@
   border-radius: 24px;
 
   /* font */
-  font-family: "Open Sans";
+  font-family: "OpenSans";
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -179,6 +195,9 @@
 .result_name {
   text-align: center;
   margin-top: 40px;
+  font-family: 'B612';
+  font-style: normal;
+  font-weight: 400;
   font-size: 12px;
   line-height: 30px;
   letter-spacing: 0.1em;
@@ -189,6 +208,9 @@
   margin-top: 20px;
   margin-left: 30px;
   margin-right: 30px;
+  font-family: 'B612';
+  font-style: normal;
+  font-weight: 400;
   font-size: 12px;
   line-height: 30px;
   letter-spacing: 0.1em;
@@ -208,7 +230,7 @@
 .body_footer {
   display: flex;
   flex-direction: column;
-  font-family: "SF Pro Display";
+  font-family: "SFProDisplay";
   font-style: normal;
   font-weight: 400;
   margin-left: 110px;
@@ -228,10 +250,10 @@
 
 }
 
-.toshare {
+/* .toshare {
 	display: flex;
 	flex-direction: column;
-	font-family: 'SF Pro Display';
+	font-family: 'SFProDisplay';
 	font-style: normal;
 	font-weight: 400;
 	margin-left: 160px;
@@ -243,7 +265,7 @@
 	width: 10%;
 	height: 50%;
 
-}
+} */
 
 .toshare:hover {
 	color: orchid;
@@ -258,7 +280,7 @@
 .toshare {
   display: flex;
   flex-direction: column;
-  font-family: "SF Pro Display";
+  font-family: "SFProDisplay";
   font-style: normal;
   font-weight: 400;
   margin-left: 136px;
