--- a/src/clubResult/clubResultPage.css
+++ b/src/clubResult/clubResultPage.css
@@ -250,23 +250,6 @@
 
 }
 
-/* .toshare {
-	display: flex;
-	flex-direction: column;
-	font-family: 'SFProDisplay';
-	font-style: normal;
-	font-weight: 400;
-	margin-left: 160px;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	text-align: center;
-	justify-content: center;
-	width: 10%;
-	height: 50%;
-
-} */
-
 .toshare:hover {
 	color: orchid;
   display: flex;
@@ -304,12 +287,9 @@
   margin: 0px;
 }
 
-.goTo {
+#goTo {
   width: 1.6%;
   height: 14%;
-  background: #424242;
-  background-image: url("/image/ic-github.png");
-  background-repeat: no-repeat;
-  margin-right: 2%;
-  margin-bottom: 1%;
+  margin-right: 3%;
+  margin-bottom: 2%;
 }
