--- a/src/css/testPage.css
+++ b/src/css/testPage.css
@@ -217,12 +217,9 @@
   height: 18%;
   margin: 0px;
 }
-.goTo {
+#goTo {
   width: 1.6%;
   height: 14%;
-  background: #424242;
-  background-image: url("/image/ic-github.png");
-  background-repeat: no-repeat;
-  margin-right: 2%;
-  margin-bottom: 1%;
+  margin-right: 3%;
+  margin-bottom: 2%;
 }
