--- a/src/result/resultPage.css
+++ b/src/result/resultPage.css
@@ -255,15 +255,11 @@
   margin: 0px;
 }
 
-.goTo {
-
+#goTo {
   width: 1.6%;
   height: 14%;
-  background: #424242;
-  background-image: url("/image/ic-github.png");
-  background-repeat: no-repeat;
-  margin-right: 2%;
-  margin-bottom: 1%;
+  margin-right: 3%;
+  margin-bottom: 2%;
 }
 
 .body_right2 {
@@ -276,7 +272,7 @@
   background: #eef0f9;
   border-radius: 8%;
   margin-left: 180px;
-  margin-right: 30px;
+  margin-right: 100px;
   margin-bottom: 80px;
   color: #000000;
   font-family: "B612";
